exposed penalty factors and updated graphs
